Fix RSS bug from python to php conversion.
The php and python versions of fragment_to_string act differently for
xml nodes that aren't fragments. I really should have called
fragment_to_string something different, or at least only used it for
actual fragments.

--- a/users/history/version_1_60_0.html
+++ b/users/history/version_1_60_0.html
@@ -197,28 +197,28 @@
                   <li>
                     <div>
                       <a href="https://svn.boost.org/trac/boost/ticket/11627">Trac
-                      #11627: <em>&quot;small_vector&lt;T,n&gt;::swap() appears
-                      to be broken&quot;</em></a>.
+                      #11627: <em>"small_vector&lt;T,n&gt;::swap() appears
+                      to be broken"</em></a>.
                     </div>
                   </li>
                   <li>
                     <div>
                       <a href="https://svn.boost.org/trac/boost/ticket/11628">Trac
-                      #11628: <em>&quot;small_vector&lt;int,n&gt; iterates
-                      over elements in destructor&quot;</em></a>.
+                      #11628: <em>"small_vector&lt;int,n&gt; iterates
+                      over elements in destructor"</em></a>.
                     </div>
                   </li>
                   <li>
                     <div>
                       <a href="https://svn.boost.org/trac/boost/ticket/11697">Trac
-                      #11697: <em>&quot;Wrong initialization order in tuple
-                      copy-constructor&quot;</em></a>.
+                      #11697: <em>"Wrong initialization order in tuple
+                      copy-constructor"</em></a>.
                     </div>
                   </li>
                   <li>
                     <div>
                       <a href="https://svn.boost.org/trac/boost/ticket/11698">Trac
-                      #11698: <em>&quot;Missing return statement in static_storage_allocator&quot;</em></a>.
+                      #11698: <em>"Missing return statement in static_storage_allocator"</em></a>.
                     </div>
                   </li>
                   <li>
@@ -421,7 +421,7 @@
                   <li>
                     <div>
                       Close <a href="https://svn.boost.org/trac/boost/ticket/7607">#7607</a>,
-                      path should not infer an invisible &quot;.&quot; at the end
+                      path should not infer an invisible "." at the end
                       of a path that ends with a slash, as resolved by <a href="https://svn.boost.org/trac/boost/ticket/7258">#7258</a>
                       and <a href="https://svn.boost.org/trac/boost/ticket/10766">#10766</a>.
                     </div>
@@ -572,8 +572,8 @@
                   <li>
                     <div>
                       <a href="https://svn.boost.org/trac/boost/ticket/11699">Trac
-                      #11699 (<em>&quot;Forward declarations of std templates
-                      causes stack corruption under Visual Studio 2015&quot;</em>)</a>.
+                      #11699 (<em>"Forward declarations of std templates
+                      causes stack corruption under Visual Studio 2015"</em>)</a>.
                     </div>
                   </li>
                 </ul>
@@ -775,8 +775,8 @@
             <li>
               <div>
                 Fixed bug <a href="https://svn.boost.org/trac/boost/ticket/11615">Trac
-                #11615: <em>&quot;Boost.Move should use the qualified name
-                for std::size_t in type_traits.hpp&quot;</em></a>,
+                #11615: <em>"Boost.Move should use the qualified name
+                for std::size_t in type_traits.hpp"</em></a>,
               </div>
             </li>
           </ul>
