Clarify doc/html requirement. Fix boostbook target reference.

--- a/development/requirements.html
+++ b/development/requirements.html
@@ -292,7 +292,9 @@ http://www.boost.org/development/website_updating.html
 
                     <td>Documentation (HTML) files.</td>
 
-                    <td>Required for all libraries.</td>
+                    <td>Required for all libraries with pregenerated
+                      documentation. And generated documentation must be
+                      generated here.</td>
                   </tr>
 
                   <tr>
@@ -469,7 +471,7 @@ explicit extra ;</pre>
                     following two features:
                   </p>
                   <ol>
-                    <li>Define a <tt>boostboost</tt> target. This target
+                    <li>Define a <tt>boostbook</tt> target. This target
                       should likely be an alias that looks roughly like:<br />
                       <pre>alias boostbook : my_boostbook_target
     : : : &lt;implicit-dependency&gt;my_boostbook_target ;</pre> But if your project
