Rename "boostbook" doc target to less confusing "boostdoc".

--- a/development/requirements.html
+++ b/development/requirements.html
@@ -471,12 +471,12 @@ explicit extra ;</pre>
                     following two features:
                   </p>
                   <ol>
-                    <li>Define a <tt>boostbook</tt> target. This target
+                    <li>Define a <tt>boostdoc</tt> target. This target
                       should likely be an alias that looks roughly like:<br />
-                      <pre>alias boostbook : my_boostbook_target
+                      <pre>alias boostdoc : my_boostbook_target
     : : : &lt;implicit-dependency&gt;my_boostbook_target ;</pre> But if your project
                       doesn't integrate into the global documentation book you
-                      can use an empty alias like:<br /> <pre>alias boostbook ;</pre></li>
+                      can use an empty alias like:<br /> <pre>alias boostdoc ;</pre></li>
                     <li>The project must default to building standalone
                       documentation if it has any. The release scripts build
                       this default so as to guarantee all projects have up to
