--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -484,10 +484,10 @@ http://www.boost.org/development/website_updating.html
 
                     <td>December 7, 2015 - December 23, 2015</td>
 
-		    <td><a href=
-			   "http://lists.boost.org/boost-announce/2015/12/0458.php">
-			Ongoing
-		      </a>
+		    <td><del><a href=
+			"http://lists.boost.org/boost-announce/2015/12/0458.php">Ongoing</a></del><br/>
+			<a href=
+			"http://lists.boost.org/Archives/boost/2016/01/227027.php">Accepted</a>
 		    </td>
 
                   </tr>
