--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -492,7 +492,23 @@ http://www.boost.org/development/website_updating.html
 
                   </tr>
 
-                  <tr>
+                <tr>
+                  <td>Boost 1.60.0 Released</td>
+
+                  <td></td>
+
+                  <td>Marshall Clow</td>
+
+                  <td>December 17, 2015</td>
+
+                  <td>
+                    <a href=
+                    "http://www.boost.org/users/news/version_1_60_0">Notes</a>
+                  </td>
+                </tr>
+
+
+		<tr>
                     <!-- Added August 2015 -->
 
                     <td>Fiber (mini-review)</td>
