List new libraries.
I just grabbed them from the documentation list, no guarantee that
they'll actually be released.

--- a/users/history/version_1_61_0.html
+++ b/users/history/version_1_61_0.html
@@ -56,7 +56,33 @@
     <ul>
       <li>
         <div>
-          <em>TODO</em>
+          <span class="library"><a href="libs/compute/">Compute</a>:</span>
+  Parallel/GPU-computing
+          library
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="libs/dll/">DLL</a>:</span>
+  Library for comfortable work
+          with DLL and DSO.
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="libs/hana/">Hana</a>:</span>
+  A modern C++ metaprogramming
+          library. It provides high level algorithms to manipulate heterogeneous
+          sequences, allows writing type-level computations with a natural syntax,
+          provides tools to introspect user-defined types and much more.
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="libs/metaparse/">Metaparse</a>:</span>
+  A library for generating
+          compile time parsers parsing embedded DSL code as part of the C++ compilation
+          process
         </div>
       </li>
     </ul>
