Fix new library links

--- a/users/history/version_1_61_0.html
+++ b/users/history/version_1_61_0.html
@@ -56,21 +56,21 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="libs/compute/">Compute</a>:</span>
+          <span class="library"><a href="/doc/libs/master/libs/compute/">Compute</a>:</span>
   Parallel/GPU-computing
           library
         </div>
       </li>
       <li>
         <div>
-          <span class="library"><a href="libs/dll/">DLL</a>:</span>
+          <span class="library"><a href="/doc/libs/master/libs/dll/">DLL</a>:</span>
   Library for comfortable work
           with DLL and DSO.
         </div>
       </li>
       <li>
         <div>
-          <span class="library"><a href="libs/hana/">Hana</a>:</span>
+          <span class="library"><a href="/doc/libs/master/libs/hana/">Hana</a>:</span>
   A modern C++ metaprogramming
           library. It provides high level algorithms to manipulate heterogeneous
           sequences, allows writing type-level computations with a natural syntax,
@@ -79,7 +79,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="libs/metaparse/">Metaparse</a>:</span>
+          <span class="library"><a href="/doc/libs/master/libs/metaparse/">Metaparse</a>:</span>
   A library for generating
           compile time parsers parsing embedded DSL code as part of the C++ compilation
           process
