Remove stray brackets from PR #143.

--- a/users/history/version_1_61_0.html
+++ b/users/history/version_1_61_0.html
@@ -334,9 +334,8 @@
                 <ul>
                   <li>
                     <div>
-                      <a href="https://github.com/boostorg/interprocess/pull/23">(
-                      GitHub Pull #23 ( (<em>"Fixed case sensetive for
-                      linux mingw"</em>)</a>.
+                      <a href="https://github.com/boostorg/interprocess/pull/23">GitHub
+                      Pull #23 (<em>"Fixed case sensetive for linux mingw"</em>)</a>.
                     </div>
                   </li>
                 </ul>
