Fit review ongoing.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -432,26 +432,6 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 
-                  <tr>
-                    <!-- Added February 2014 -->
-                    <td>Fit</td>
-
-                    <td>Paul Fultz</td>
-
-                    <td>
-                      <ul>
-                        <li><a href="https://github.com/pfultz2/Fit/tree/boost">
-                            Source (Github)</a>
-                        <li><a href="http://pfultz2.github.io/Fit/doc/html/">
-                        Documentation</a>
-                      </ul>
-                    </td>                     
-
-                    <td>Vicente Botet</td>
-
-                    <td>March 2, 2016 - March 13, 2016</td>
-                  </tr>
-
 		  <!--
                   <tr>
                     <!== Added February 2014 - >
@@ -492,6 +472,21 @@ http://www.boost.org/development/website_updating.html
                     <th>Result</th>
                   </tr>
                 </thead>
+
+                  <tr>
+                    <!-- Added February 2014 -->
+                    <td>Fit</td>
+
+                    <td>Paul Fultz</td>
+
+                    <td>Vicente Botet</td>
+
+                    <td>March 2, 2016 - March 13, 2016</td>
+
+		    <td><a href=
+			"http://lists.boost.org/Archives/boost/2016/03/228107.php">Ongoing</a>
+		    </td>
+                  </tr>
 
                   <tr>
                     <!-- Added January 2011 -->
