--- a/users/history/version_1_61_0.html
+++ b/users/history/version_1_61_0.html
@@ -493,11 +493,6 @@
           </ul>
         </div>
       </li>
-      <li>
-        <div>
-          <em>TODO</em>
-        </div>
-      </li>
     </ul>
   </div>
   <div id="version_1_61_0.compilers_tested">
@@ -508,7 +503,141 @@
     <ul>
       <li>
         <div>
-          <em>TODO</em>
+          Linux:
+          <ul>
+            <li>
+              <div>
+                Clang: 3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7.1
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, C++14: 3.7.1, 3.8.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.4.7, 4.5.3, 4.6.3, 4.7.3, 4.8.4, 4.8.5, 4.9.3, 5.3.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++11: 4.4.7
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++14: 5.2.1, 5.3.1
+              </div>
+            </li>
+            <li>
+              <div>
+                Intel: 16.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          Windows:
+          <ul>
+            <li>
+              <div>
+                GCC, C++03, mingw: 3.4.5
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++11, mingw: 4.6.4, 4.7.3, 4.8.1
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++14, mingw: 4.9.3, 5.1, 5.2
+              </div>
+            </li>
+            <li>
+              <div>
+                Visual C++: 7.1, 8.0, 9.0, 10.0, 11.0, 12.0, 14.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          Android:
+          <ul>
+            <li>
+              <div>
+                Clang: 3.6, 3.7
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.9, 5.3
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          FreeBSD:
+          <ul>
+            <li>
+              <div>
+                Clang: 3.4.1, 3.7
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.8.5, 5.3
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          Haiku:
+          <ul>
+            <li>
+              <div>
+                GCC, C++11: 4.8.5
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          QNX:
+          <ul>
+            <li>
+              <div>
+                QCC: 4.4.2
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          SunOS:
+          <ul>
+            <li>
+              <div>
+                Oracle Solaris Studio: 12.4, 12.5
+              </div>
+            </li>
+            <li>
+              <div>
+                Oracle Solaris Studio, C++11: 12.5
+              </div>
+            </li>
+          </ul>
         </div>
       </li>
     </ul>
@@ -518,7 +647,168 @@
     <ul>
       <li>
         <div>
-          <em>TODO</em>
+          Linux:
+          <ul>
+            <li>
+              <div>
+                Clang: 3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7.1
+              </div>
+            </li>
+            <li>
+              <div>
+                Clang, c++14: 3.7.1, 3.8.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.4.7, 4.5.3, 4.6.3, 4.7.3, 4.8.5, 4.9.3, 5.3.0, 5.3.1, 6.0.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++11: 4.4.7
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++14: 5.2.1
+              </div>
+            </li>
+            <li>
+              <div>
+                Intel: 16.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          OS X:
+          <ul>
+            <li>
+              <div>
+                Apple Clang: 7.0.2
+              </div>
+            </li>
+            <li>
+              <div>
+                G++: 5.3.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          Windows:
+          <ul>
+            <li>
+              <div>
+                GCC, C++03, mingw: 3.4.5
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++11, mingw: 4.6.4, 4.7.3, 4.8.1
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++14, mingw: 4.9.3, 5.1, 5.2
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, cygwin: 5.3.0
+              </div>
+            </li>
+            <li>
+              <div>
+                Visual C++: 7.1, 8.0, 9.0, 10.0, 11.0, 12.0, 14.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          Android:
+          <ul>
+            <li>
+              <div>
+                Clang: 3.6, 3.7
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 4.9, 5.3, 6.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          FreeBSD:
+          <ul>
+            <li>
+              <div>
+                Clang: 3.41, 3.7.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC, C++11: 4.8.5, 5.3.0, 6.0
+              </div>
+            </li>
+            <li>
+              <div>
+                GCC: 6.0
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          Haiku:
+          <ul>
+            <li>
+              <div>
+                GCC, C++11: 4.8.5
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          QNX:
+          <ul>
+            <li>
+              <div>
+                QCC: 4.4.2
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          SunOS:
+          <ul>
+            <li>
+              <div>
+                Oracle Solaris Studio: 12.4, 12.5
+              </div>
+            </li>
+            <li>
+              <div>
+                Oracle Solaris Studio, C++11: 12.5
+              </div>
+            </li>
+          </ul>
         </div>
       </li>
     </ul>
@@ -526,7 +816,9 @@
   <div id="version_1_61_0.acknowledgements">
     <h3><span class="link">Acknowledgements</span></h3>
     <p>
-      <em>TODO</em>
+      <a href="/users/people/beman_dawes.html">Beman Dawes</a>, Eric Niebler,
+      <a href="/users/people/rene_rivera.html">Rene Rivera</a>, Daniel James,
+      Vladimir Prus and Marshall Clow managed this release.
     </p>
   </div>
 </div>
