Link to 1_61_0_b1 docs.

--- a/users/history/version_1_61_0.html
+++ b/users/history/version_1_61_0.html
@@ -44,7 +44,7 @@
               "news-title">Version 1.61.0 - work in progress</span></h2>
 
               <p><span class=news-date">In Progress</span></p>
-              <p><a href="/doc/libs/master/">Documentation</a>
+              <p><a href="/doc/libs/1_61_0_b1/">Documentation</a>
 
               <div class="news-description">
                 <div class="description">
@@ -56,21 +56,21 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/compute/">Compute</a>:</span>
+          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/compute/">Compute</a>:</span>
   Parallel/GPU-computing
           library
         </div>
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/dll/">DLL</a>:</span>
+          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/dll/">DLL</a>:</span>
   Library for comfortable work
           with DLL and DSO.
         </div>
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/hana/">Hana</a>:</span>
+          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/hana/">Hana</a>:</span>
   A modern C++ metaprogramming
           library. It provides high level algorithms to manipulate heterogeneous
           sequences, allows writing type-level computations with a natural syntax,
@@ -79,7 +79,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/metaparse/">Metaparse</a>:</span>
+          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/metaparse/">Metaparse</a>:</span>
   A library for generating
           compile time parsers parsing embedded DSL code as part of the C++ compilation
           process. The library is similar to Spirit, however while parsers built
@@ -93,7 +93,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/container/">Container</a>:</span>
+          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/container/">Container</a>:</span>
           <ul>
             <li>
               <div>
@@ -167,7 +167,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/context/">Context</a>:</span>
+          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/context/">Context</a>:</span>
           <ul>
             <li>
               <div>
@@ -225,7 +225,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/coroutine/">Coroutine</a>:</span>
+          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/coroutine/">Coroutine</a>:</span>
           <ul>
             <li>
               <div>
@@ -237,7 +237,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/coroutine2/">Coroutine2</a>:</span>
+          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/coroutine2/">Coroutine2</a>:</span>
           <ul>
             <li>
               <div>
@@ -259,7 +259,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/fusion/">Fusion</a>:</span>
+          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/fusion/">Fusion</a>:</span>
           <ul>
             <li>
               <div>
@@ -285,7 +285,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/intrusive/">Intrusive</a>:</span>
+          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/intrusive/">Intrusive</a>:</span>
           <ul>
             <li>
               <div>
@@ -326,7 +326,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/interprocess/">Interprocess</a>:</span>
+          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/interprocess/">Interprocess</a>:</span>
           <ul>
             <li>
               <div>
@@ -346,7 +346,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/log/">Log</a>:</span>
+          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/log/">Log</a>:</span>
           <ul>
             <li>
               <div>
@@ -396,7 +396,7 @@
             </li>
             <li>
               <div>
-                See <a href="/doc/libs/master/libs/log/doc/html/log/changelog.html">changelog</a>
+                See <a href="/doc/libs/1_61_0_b1/libs/log/doc/html/log/changelog.html">changelog</a>
                 for more details.
               </div>
             </li>
@@ -405,7 +405,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/move/">Move</a>:</span>
+          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/move/">Move</a>:</span>
           <ul>
             <li>
               <div>
@@ -432,7 +432,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/master/libs/optional/">Optional</a>:</span>
+          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/optional/">Optional</a>:</span>
           <ul>
             <li>
               <div>
