Geometry release notes

--- a/users/history/version_1_61_0.html
+++ b/users/history/version_1_61_0.html
@@ -285,6 +285,25 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/geometry">Geometry</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Overlays: enhanced implementation for handling colocated intersection
+                points, fixing many issues
+              </div>
+            </li>
+            <li>
+              <div>
+                Additional support and fixes for spherical and geographic coordinate
+                systems
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/doc/libs/1_61_0_b1/libs/intrusive/">Intrusive</a>:</span>
           <ul>
             <li>
