--- a/users/history/version_1_61_0.html
+++ b/users/history/version_1_61_0.html
@@ -45,6 +45,9 @@
 
               <p><span class=news-date">In Progress</span></p>
               <p><a href="/doc/libs/1_61_0_b1/">Documentation</a>
+              <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th><th scope="col">SHA256 Hash</th></tr>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="http://boost.cowic.de/rc/boost_1_61_0_b1.tar.bz2/download">boost_1_61_0_b1.tar.bz2</a></td><td>866941f0038b27fcc69ced1490b2dc5fa8d20f505d66b939a92a68ef194d1a6c</td></tr><tr><td><a href="http://boost.cowic.de/rc/boost_1_61_0_b1.tar.gz/download">boost_1_61_0_b1.tar.gz</a></td><td>0b92c5fb5b91641409b9675b2fd11d3b3fa5f71dd986d3b5fb03da201bf55474</td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="http://boost.cowic.de/rc/boost_1_61_0_b1.7z/download">boost_1_61_0_b1.7z</a></td><td>3f8888099ee6f62b412a13be916dead2bacbdd6d69e5afd5b6fea4bb738e5df4</td></tr><tr><td><a href="http://boost.cowic.de/rc/boost_1_61_0_b1.zip/download">boost_1_61_0_b1.zip</a></td><td>9dffe5ee7f5f7bf7695f5738c686e44bd266933e3ca68732b0de5520c3c82615</td></tr></table><p><a href='/users/download/signatures/boost_1_61_0_b1.sums.asc'>PGP signed list of checksums.</a></p>
 
               <div class="news-description">
                 <div class="description">
