Update beta details.

--- a/users/history/version_1_61_0.html
+++ b/users/history/version_1_61_0.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>Version 1.61.0 - work in progress</title>
+  <title>Version 1.61.0 beta</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href="/style-v2/section-boost.css" />
@@ -34,20 +34,16 @@
             <div class="section-title">
               <h1>Version 1.61.0</h1>
             </div>
-                        <div class="section-note"><p>Note: This release is
-                        still under development. Please don't use this page as
-                        a source of information, it's here for development
-                        purposes only. Everything is subject to
-                        change.</p></div>
+
             <div class="section-body">
               <h2><span class=
-              "news-title">Version 1.61.0 - work in progress</span></h2>
+              "news-title">Version 1.61.0 beta</span></h2>
 
               <p><span class=news-date">In Progress</span></p>
               <p><a href="/doc/libs/1_61_0_b1/">Documentation</a>
-              <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th><th scope="col">SHA256 Hash</th></tr>
-<tr><th scope="row" rowspan="2">unix</th><td><a href="http://boost.cowic.de/rc/boost_1_61_0_b1.tar.bz2/download">boost_1_61_0_b1.tar.bz2</a></td><td>866941f0038b27fcc69ced1490b2dc5fa8d20f505d66b939a92a68ef194d1a6c</td></tr><tr><td><a href="http://boost.cowic.de/rc/boost_1_61_0_b1.tar.gz/download">boost_1_61_0_b1.tar.gz</a></td><td>0b92c5fb5b91641409b9675b2fd11d3b3fa5f71dd986d3b5fb03da201bf55474</td></tr>
-<tr><th scope="row" rowspan="2">windows</th><td><a href="http://boost.cowic.de/rc/boost_1_61_0_b1.7z/download">boost_1_61_0_b1.7z</a></td><td>3f8888099ee6f62b412a13be916dead2bacbdd6d69e5afd5b6fea4bb738e5df4</td></tr><tr><td><a href="http://boost.cowic.de/rc/boost_1_61_0_b1.zip/download">boost_1_61_0_b1.zip</a></td><td>9dffe5ee7f5f7bf7695f5738c686e44bd266933e3ca68732b0de5520c3c82615</td></tr></table><p><a href='/users/download/signatures/boost_1_61_0_b1.sums.asc'>List of checksums</a> signed by <a href='https://pgp.mit.edu/pks/lookup?op=get&amp;search=0xDA472E8659753BA4'>Vladimir Prus</a></p>.
+              <table class="download-table"><caption>Beta Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th><th scope="col">SHA256 Hash</th></tr>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="https://bintray.com/artifact/download/boostorg/release/boost_1_61_0_b1.tar.bz2">boost_1_61_0_b1.tar.bz2</a></td><td>866941f0038b27fcc69ced1490b2dc5fa8d20f505d66b939a92a68ef194d1a6c</td></tr><tr><td><a href="https://bintray.com/artifact/download/boostorg/release/boost_1_61_0_b1.tar.gz">boost_1_61_0_b1.tar.gz</a></td><td>0b92c5fb5b91641409b9675b2fd11d3b3fa5f71dd986d3b5fb03da201bf55474</td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="https://bintray.com/artifact/download/boostorg/release/boost_1_61_0_b1.7z">boost_1_61_0_b1.7z</a></td><td>3f8888099ee6f62b412a13be916dead2bacbdd6d69e5afd5b6fea4bb738e5df4</td></tr><tr><td><a href="https://bintray.com/artifact/download/boostorg/release/boost_1_61_0_b1.zip">boost_1_61_0_b1.zip</a></td><td>9dffe5ee7f5f7bf7695f5738c686e44bd266933e3ca68732b0de5520c3c82615</td></tr></table><p><a href='/users/download/signatures/boost_1_61_0_b1.sums.asc'>List of checksums</a> signed by <a href='https://pgp.mit.edu/pks/lookup?op=get&amp;search=0xDA472E8659753BA4'>Vladimir Prus</a></p>.
 
               <div class="news-description">
                 <div class="description">
