Added Fiber Mini-Review.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -432,6 +432,28 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 
+                  <tr>
+                    <!-- Added May 2016 -->
+
+                    <td>Fiber (mini-review)</td>
+
+                    <td>Oliver Kowalke</td>
+
+                    <td>
+                      <ul>
+                        <li><a href="https://github.com/olk/boost-fiber">
+                            Source</a>
+                        <li><a href=" http://olk.github.io/libs/fiber/doc/html/">
+                        Documentation</a>
+                      </ul>
+                    </td>                     
+
+	            <td>Nat Goodspeed</td>
+
+                    <td>May 23, 2016 - June 2, 2016</td>
+
+                  </tr>
+
 		  <!--
                   <tr>
                     <!== Added February 2014 - >
