--- a/users/history/version_1_61_0.html
+++ b/users/history/version_1_61_0.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>Version 1.61.0 beta</title>
+  <title>Version 1.61.0</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href="/style-v2/section-boost.css" />
@@ -37,19 +37,13 @@
 
             <div class="section-body">
               <h2><span class=
-              "news-title">Version 1.61.0 beta</span></h2>
+              "news-title">Version 1.61.0</span></h2>
 
-              <p><span class=news-date">In Progress</span></p>
-              <p><a href="/doc/libs/1_61_0_b1/">Documentation</a>
-              <table class="download-table"><caption>Beta Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th><th scope="col">SHA256 Hash</th></tr>
-<tr><th scope="row" rowspan="2">unix</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.61.0.beta.1/boost_1_61_0_b1.tar.bz2">boost_1_61_0_b1.tar.bz2</a></td><td>866941f0038b27fcc69ced1490b2dc5fa8d20f505d66b939a92a68ef194d1a6c</td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.61.0.beta.1/boost_1_61_0_b1.tar.gz">boost_1_61_0_b1.tar.gz</a></td><td>0b92c5fb5b91641409b9675b2fd11d3b3fa5f71dd986d3b5fb03da201bf55474</td></tr>
-<tr><th scope="row" rowspan="2">windows</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.61.0.beta.1/boost_1_61_0_b1.7z">boost_1_61_0_b1.7z</a></td><td>3f8888099ee6f62b412a13be916dead2bacbdd6d69e5afd5b6fea4bb738e5df4</td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.61.0.beta.1/boost_1_61_0_b1.zip">boost_1_61_0_b1.zip</a></td><td>9dffe5ee7f5f7bf7695f5738c686e44bd266933e3ca68732b0de5520c3c82615</td></tr></table><p><a href='/users/download/signatures/boost_1_61_0_b1.sums.asc'>List of checksums</a> signed by <a href='https://pgp.mit.edu/pks/lookup?op=get&amp;search=0xDA472E8659753BA4'>Vladimir Prus</a></p>.
-
-<h3>Third Party Downloads</h3>
-<ul>
-<li><a href="https://sourceforge.net/projects/boost/files/boost-binaries/1.61.0_b1">Windows Binaries</a></li>
-</ul>
-
+              <p><span class=news-date">May 13th, 2016 02:58 GMT</span></p>
+              <p><a href="/doc/libs/1_61_0/">Documentation</a>
+              <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
+<tr><th scope="row">unix</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.tar.gz">boost_1_61_0.tar.gz</a></td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.7z">boost_1_61_0.7z</a></td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.zip">boost_1_61_0.zip</a></td></tr></table>
               <div class="news-description">
                 <div class="description">
 
@@ -60,14 +54,14 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/compute/">Compute</a>:</span>
+          <span class="library"><a href="/libs/compute/">Compute</a>:</span>
   Parallel/GPU-computing
           library
         </div>
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/dll/">DLL</a>:</span>
+          <span class="library"><a href="/libs/dll/">DLL</a>:</span>
   Library for comfortable work
           with DLL and DSO. Library provides a portable across platforms way to:
           <ul>
@@ -106,7 +100,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/hana/">Hana</a>:</span>
+          <span class="library"><a href="/libs/hana/">Hana</a>:</span>
   A modern C++ metaprogramming
           library. It provides high level algorithms to manipulate heterogeneous
           sequences, allows writing type-level computations with a natural syntax,
@@ -115,7 +109,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/metaparse/">Metaparse</a>:</span>
+          <span class="library"><a href="/libs/metaparse/">Metaparse</a>:</span>
   A library for generating
           compile time parsers parsing embedded DSL code as part of the C++ compilation
           process. The library is similar to Spirit, however while parsers built
@@ -129,7 +123,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/any/">Any</a>:</span>
+          <span class="library"><a href="/libs/any/">Any</a>:</span>
           <ul>
             <li>
               <div>
@@ -141,7 +135,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/container/">Container</a>:</span>
+          <span class="library"><a href="/libs/container/">Container</a>:</span>
           <ul>
             <li>
               <div>
@@ -215,7 +209,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/context/">Context</a>:</span>
+          <span class="library"><a href="/libs/context/">Context</a>:</span>
           <ul>
             <li>
               <div>
@@ -283,7 +277,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/coroutine/">Coroutine</a>:</span>
+          <span class="library"><a href="/libs/coroutine/">Coroutine</a>:</span>
           <ul>
             <li>
               <div>
@@ -295,7 +289,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/coroutine2/">Coroutine2</a>:</span>
+          <span class="library"><a href="/libs/coroutine2/">Coroutine2</a>:</span>
           <ul>
             <li>
               <div>
@@ -317,7 +311,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/fusion/">Fusion</a>:</span>
+          <span class="library"><a href="/libs/fusion/">Fusion</a>:</span>
           <ul>
             <li>
               <div>
@@ -355,7 +349,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/geometry">Geometry</a>:</span>
+          <span class="library"><a href="/libs/geometry">Geometry</a>:</span>
           <ul>
             <li>
               <div>
@@ -374,7 +368,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/interprocess/">Interprocess</a>:</span>
+          <span class="library"><a href="/libs/interprocess/">Interprocess</a>:</span>
           <ul>
             <li>
               <div>
@@ -394,7 +388,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/intrusive/">Intrusive</a>:</span>
+          <span class="library"><a href="/libs/intrusive/">Intrusive</a>:</span>
           <ul>
             <li>
               <div>
@@ -435,7 +429,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/lexical_cast/">Lexical Cast</a>:</span>
+          <span class="library"><a href="/libs/lexical_cast/">Lexical Cast</a>:</span>
           <ul>
             <li>
               <div>
@@ -447,7 +441,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/log/">Log</a>:</span>
+          <span class="library"><a href="/libs/log/">Log</a>:</span>
           <ul>
             <li>
               <div>
@@ -497,7 +491,7 @@
             </li>
             <li>
               <div>
-                See <a href="/doc/libs/1_61_0_b1/libs/log/doc/html/log/changelog.html">changelog</a>
+                See <a href="/libs/log/doc/html/log/changelog.html">changelog</a>
                 for more details.
               </div>
             </li>
@@ -506,7 +500,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/math/">Math</a>:</span>
+          <span class="library"><a href="/libs/math/">Math</a>:</span>
           <ul>
             <li>
               <div>
@@ -518,7 +512,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/move/">Move</a>:</span>
+          <span class="library"><a href="/libs/move/">Move</a>:</span>
           <ul>
             <li>
               <div>
@@ -545,7 +539,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/multiprecision/">Multiprecision</a>:</span>
+          <span class="library"><a href="/libs/multiprecision/">Multiprecision</a>:</span>
           <ul>
             <li>
               <div>
@@ -645,7 +639,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/optional/">Optional</a>:</span>
+          <span class="library"><a href="/libs/optional/">Optional</a>:</span>
           <ul>
             <li>
               <div>
@@ -708,7 +702,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/regex/">Regex</a>:</span>
+          <span class="library"><a href="/libs/regex/">Regex</a>:</span>
           <ul>
             <li>
               <div>
@@ -720,11 +714,11 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/test/">Test</a>:</span>
+          <span class="library"><a href="/libs/test/">Test</a>:</span>
           <ul>
             <li>
               <div>
-                Boost.test v3.2 see the '<a href="/doc/libs/1_61_0_b1/libs/test/doc/html/boost_test/change_log.html">Change
+                Boost.test v3.2 see the '<a href="/doc/libs/1_61_0/libs/test/doc/html/boost_test/change_log.html">Change
                 log</a>' section for details.
               </div>
             </li>
@@ -768,7 +762,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_61_0_b1/libs/variant/">Variant</a>:</span>
+          <span class="library"><a href="/libs/variant/">Variant</a>:</span>
           <ul>
             <li>
               <div>
