Add link to tar.bz2 file.

--- a/users/history/version_1_61_0.html
+++ b/users/history/version_1_61_0.html
@@ -42,7 +42,7 @@
               <p><span class=news-date">May 13th, 2016 02:58 GMT</span></p>
               <p><a href="/doc/libs/1_61_0/">Documentation</a>
               <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th></tr>
-<tr><th scope="row">unix</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.tar.gz">boost_1_61_0.tar.gz</a></td></tr>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.tar.bz2">boost_1_61_0.tar.bz2</a></td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.tar.gz">boost_1_61_0.tar.gz</a></td></tr>
 <tr><th scope="row" rowspan="2">windows</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.7z">boost_1_61_0.7z</a></td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.zip">boost_1_61_0.zip</a></td></tr></table>
               <div class="news-description">
                 <div class="description">
