--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -495,6 +495,21 @@ http://www.boost.org/development/website_updating.html
                   </tr>
                 </thead>
 
+                <tr>
+                  <td>Boost 1.61.0 Released</td>
+
+                  <td></td>
+
+                  <td>Rene Rivera</td>
+
+                  <td>May 13, 2016</td>
+
+                  <td>
+                    <a href=
+                    "http://www.boost.org/users/history/version_1_61_0.html">Notes</a>
+                  </td>
+                </tr>
+		
                   <tr>
                     <!-- Added February 2014 -->
                     <td>Fit</td>
