Fit Library Rejected.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -520,8 +520,10 @@ http://www.boost.org/development/website_updating.html
 
                     <td>March 2, 2016 - March 13, 2016</td>
 
-		    <td><a href=
-			"http://lists.boost.org/Archives/boost/2016/03/228107.php">Ongoing</a>
+		    <td><del><a href=
+			   "http://lists.boost.org/Archives/boost/2016/03/228107.php">Ongoing</a></del><br/>
+		      <a href=
+			 "http://lists.boost.org/Archives/boost/2016/04/228770.php">Rejected</a>
 		    </td>
                   </tr>
 
