Wizard report for May

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -496,6 +496,22 @@ http://www.boost.org/development/website_updating.html
                 </thead>
 
                 <tr>
+                  <td>Review Wizard Status Report</td>
+
+                  <td></td>
+
+                  <td>Ronald Garcia</td>
+
+                  <td>May 19, 2016</td>
+
+                  <td>
+                    <a href=
+		       "http://lists.boost.org/boost-announce/2016/05/0471.php">
+		      Report</a>
+                  </td>
+                </tr>
+
+		<tr>
                   <td>Boost 1.61.0 Released</td>
 
                   <td></td>
