Add signature + windows downloads.

--- a/users/history/version_1_61_0.html
+++ b/users/history/version_1_61_0.html
@@ -43,7 +43,13 @@
               <p><a href="/doc/libs/1_61_0/">Documentation</a>
               <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th><th scope="col">SHA256 Hash</th></tr>
 <tr><th scope="row" rowspan="2">unix</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.tar.bz2">boost_1_61_0.tar.bz2</a></td><td>a547bd06c2fd9a71ba1d169d9cf0339da7ebf4753849a8f7d6fdb8feee99b640</td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.tar.gz">boost_1_61_0.tar.gz</a></td><td>a77c7cc660ec02704c6884fbb20c552d52d60a18f26573c9cee0788bf00ed7e6</td></tr>
-<tr><th scope="row" rowspan="2">windows</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.7z">boost_1_61_0.7z</a></td><td>fa1c34862b7ba8674ed6e064a14667a11830c6252f702d9458451834b74f7815</td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.zip">boost_1_61_0.zip</a></td><td>02d420e6908016d4ac74dfc712eec7d9616a7fc0da78b0a1b5b937536b2e01e8</td></tr></table>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.7z">boost_1_61_0.7z</a></td><td>fa1c34862b7ba8674ed6e064a14667a11830c6252f702d9458451834b74f7815</td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.61.0/boost_1_61_0.zip">boost_1_61_0.zip</a></td><td>02d420e6908016d4ac74dfc712eec7d9616a7fc0da78b0a1b5b937536b2e01e8</td></tr></table><p><a href='/users/download/signatures/boost_1_61_0.sums.asc'>List of checksums</a> signed by <a href='https://pgp.mit.edu/pks/lookup?op=get&amp;search=0xDA472E8659753BA4'>Vladimir Prus</a></p>
+
+<h3>Third Party Downloads</h3>
+<ul>
+<li><a href="https://sourceforge.net/projects/boost/files/boost-binaries/1.61.0">Windows Binaries</a></li>
+</ul>
+
               <div class="news-description">
                 <div class="description">
 
